# World_Model

./: .gitignore  ARCHITECTURE_GUIDE.md  DEVELOPER_GUIDE.md  PROJECT_SUMMARY.md  README.md  dataset_analysis.md  graph_jepa_dataset_creation.py  inference.py  main.py  pyproject.toml  train_jepa_v0.py  visualize_embeddings.py
inference_results/: inference_results.json
